--- a/app/src/main/res/xml/habit_widget_info.xml
+++ b/app/src/main/res/xml/habit_widget_info.xml
@@ -5,6 +5,6 @@
     android:minResizeWidth="110dp"
     android:minWidth="180dp"
     android:previewImage="@drawable/react_love"
-    android:resizeMode="horizontal"
+    android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="600000"
     android:widgetCategory="home_screen" />
