--- a/app/src/main/res/layout/widget_habits.xml
+++ b/app/src/main/res/layout/widget_habits.xml
@@ -71,9 +71,8 @@
         android:id="@+id/widgetHabitList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null"
-        android:numColumns="2"
-        android:dividerHeight="0dp" />
+        android:background="?android:colorBackground"
+        android:numColumns="5" />
 
     <!--<LinearLayout-->
     <!--android:id="@+id/widgetHabitContainer"-->
