--- a/app/src/main/res/layout/widget_habits.xml
+++ b/app/src/main/res/layout/widget_habits.xml
@@ -1,40 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <TextView
         android:id="@+id/widgetHabitHeader"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@color/md_blue_500">
+        android:layout_height="42dp"
+        android:gravity="center"
+        android:text="Daily Habits"
+        android:background="@color/md_blue_500"
+        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+        android:textColor="@color/md_white" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"
-            android:orientation="vertical">
+    <!--<RelativeLayout-->
+    <!--android:id="@+id/widgetHabitHeader"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="32dp"-->
+    <!--android:background="@color/md_blue_500">-->
 
-            <TextView
-                android:id="@+id/widgetDayOfWeek"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
-                android:textColor="@color/md_white" />
+    <!--<LinearLayout-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentStart="true"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:layout_marginStart="16dp"-->
+    <!--android:orientation="vertical">-->
 
-            <TextView
-                android:id="@+id/widgetDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:textColor="@color/md_white"
-                tools:text="18 Sep" />
-        </LinearLayout>
+    <!--<TextView-->
+    <!--android:id="@+id/widgetDayOfWeek"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"-->
+    <!--android:textColor="@color/md_white" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/widgetDate"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:textAppearance="@style/TextAppearance.AppCompat.Subhead"-->
+    <!--android:textColor="@color/md_white"-->
+    <!--tools:text="18 Sep" />-->
+    <!--</LinearLayout>-->
 
         <!--<ImageButton-->
             <!--android:id="@+id/widgetHabitPet"-->
@@ -58,7 +67,7 @@
             <!--android:background="?android:attr/selectableItemBackgroundBorderless"-->
             <!--android:padding="16dp"-->
             <!--android:src="@drawable/ic_add_white_24dp" />-->
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
 
     <!--<ListView-->
     <!--android:id="@+id/widgetHabitList"-->
