--- a/app/src/main/res/layout/controller_today.xml
+++ b/app/src/main/res/layout/controller_today.xml
@@ -16,14 +16,134 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:minHeight="?attr/actionBarSize"
+            app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-            <ImageView
-                android:id="@+id/backdrop"
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:minHeight="260dp"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax">
+
+                <ImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/backdropTransparentColor"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="?attr/colorPrimary"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/todayDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="21"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+                    android:textColor="@color/md_white"
+                    app:layout_constraintBottom_toTopOf="@+id/todayDayOfWeek"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed" />
+
+                <TextView
+                    android:id="@+id/todayDayOfWeek"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tuesday"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                    android:textColor="@color/md_light_text_70"
+                    app:layout_constraintBottom_toTopOf="@+id/todayQuestsDone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/todayDate" />
+
+                <TextView
+                    android:id="@+id/todayQuestsDone"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:text="2/4"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    app:layout_constraintBottom_toTopOf="@+id/todayQuestsDoneLabel"
+                    app:layout_constraintEnd_toStartOf="@+id/todayHabitsDone"
+                    app:layout_constraintHorizontal_chainStyle="spread"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/todayDayOfWeek" />
+
+                <TextView
+                    android:id="@+id/todayQuestsDoneLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Quests done"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/md_light_text_70"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/todayQuestsDone"
+                    app:layout_constraintStart_toStartOf="@+id/todayQuestsDone"
+                    app:layout_constraintTop_toBottomOf="@+id/todayQuestsDone" />
+
+                <TextView
+                    android:id="@+id/todayHabitsDone"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="1/5"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    app:layout_constraintBottom_toBottomOf="@+id/todayQuestsDone"
+                    app:layout_constraintEnd_toStartOf="@+id/todayDailyChallengeDone"
+                    app:layout_constraintStart_toEndOf="@+id/todayQuestsDone"
+                    app:layout_constraintTop_toTopOf="@+id/todayQuestsDone" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Habits done"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/md_light_text_70"
+                    app:layout_constraintBottom_toBottomOf="@+id/todayQuestsDoneLabel"
+                    app:layout_constraintEnd_toEndOf="@+id/todayHabitsDone"
+                    app:layout_constraintStart_toStartOf="@+id/todayHabitsDone"
+                    app:layout_constraintTop_toTopOf="@+id/todayQuestsDoneLabel" />
+
+                <TextView
+                    android:id="@+id/todayDailyChallengeDone"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="1/3"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    app:layout_constraintBottom_toBottomOf="@+id/todayQuestsDone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/todayHabitsDone"
+                    app:layout_constraintTop_toTopOf="@+id/todayQuestsDone" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Daily Challenge"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/md_light_text_70"
+                    app:layout_constraintBottom_toBottomOf="@+id/todayQuestsDoneLabel"
+                    app:layout_constraintEnd_toEndOf="@+id/todayDailyChallengeDone"
+                    app:layout_constraintStart_toStartOf="@+id/todayDailyChallengeDone"
+                    app:layout_constraintTop_toTopOf="@+id/todayQuestsDoneLabel" />
+
+            </android.support.constraint.ConstraintLayout>
+
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
