--- a/app/src/main/res/layout/controller_today.xml
+++ b/app/src/main/res/layout/controller_today.xml
@@ -74,7 +74,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
-                    android:text="2/4"
+                    android:text="2.5/5"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     app:layout_constraintBottom_toTopOf="@+id/todayQuestsDoneLabel"
@@ -88,7 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="Quests done"
+                    android:text="Awesomeness"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/md_light_text_70"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -100,7 +100,7 @@
                     android:id="@+id/todayHabitsDone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="1/5"
+                    android:text="1.5/5"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     app:layout_constraintBottom_toBottomOf="@+id/todayQuestsDone"
@@ -111,7 +111,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Habits done"
+                    android:text="Focus Hours"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/md_light_text_70"
                     app:layout_constraintBottom_toBottomOf="@+id/todayQuestsDoneLabel"
